--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,18 @@ dependencies {
     // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
     compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
 
-    compile  'org.codehaus.groovy:groovy-all:2.3.11'
+    testCompile  'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    from {
+        configurations.runtime.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    archiveName "${project.name}-${version}.jar"
 }
